' Generated by UML Generator
' Encoded: jLTjJ-D64FwUNs4f7p0gHa1LwOIkw4BY0YfNK99Ue5M5DlQIRB5tezqDu7BmspkxQ--Byy9TfGefxCwCdtaVZpy9YRXSbaL7F12wG1oLKLOW8NfISZ9TIdoHCJeY_-3ee3CdEOuomhC2TpfQAZfT5WMMqKidYjwUZoD2fJfLzfGROlHpTAIlLNCzKDSNq2v9zXhDCPdDPSFxAU0zaLpE6zO7O2K9_FnWDCS6VoyomBkAirpaIE9OFO-FepDKuf4wxXv7ZupaIYBdw2cU7UN0vMWn9vau6dXiWUKNNB2Co2hE6mMrwPxO3CjJjgIvY84un9b4T5RWeq7djObEId5PZH5zC06oBc55Dmw8uwZ7EQekYP0V3Ua4_AJuQPKUxrhlBVB_4W1hg45AFNCtebgd5SVuEsM8WufiZZYuz09_EydEdls9NlU-YHIzAh1ioJccyhf05UOMTETvHpCP5Qm0iqOPeXJpEeBrBHvLGk9odr0Nm0NWn9xB2mxHErK6-zHiZhE72T4WG9uoK89eyppcdzaZZjT6e8_e8nAjlFU6QUzkSZ4OdzjIFpXObJXFByxEnosHTjmLRL47GnM2ki-0UJNz6qenAAipIpvH_YkfIyOMy1mfCLSaNP2Z1NgY6guXwqWvRtJzTHUOtpDUzbbH444O7M09o728mzwmbYgwRxRgBvF665hcmPZlfmA1utrMBXY5XCSpLwHUf444x40PZfnt9jhlLl_Rzkf_Ux-lBQZMc0pkheVfQ9GER8L0skvH8PItYLJHF8uAHcShSuyZchEIOW7v6kfpNRdcOXh-hFSvlRlwaWxNmlUsAfzivOwsSwzx_NH5mjO54TQmLcz0VXrhjcAzbseYREnMCHmhNx4YmEXjnd0ij1rZiXd3iPwsOmG1Q-40TxC6nnBRD2Z9GCLqhHqquxY4pj5jt6fAIrFb61Rq6CEGvBgYtGkWX5wC4Pz1VOvW8Q2pF_zQ6NUw4_gCIWuZeKPODwvCsRIaL_jK2JtWwff3L-0y1jwlk4eVSV3k1O4X1iStI5ZRxClNkGIbEBxezowR-NeOSC-lXXT_NFqsTdork7JjRjErkqrNthZZhJswZUTGNwlW6YmpFwfXq0rtdoDDanDVhgQT1uA7YfZaX9lXw-zL2UC4We5yklDBlvd_u-wHiOB1BEkhVo2f_--VNlwUslHksacWzcvLtPaegLA-ZTTjL3UXq4sD5GeDgb0AxclNiy5pI-wvsUTQSaqKFN4WNxamXZW-8yo0X_lkUwXh9DvRh43m7dJK-ovGpSckST-yrYMAtMZRADLLKZgBMnTadVeugskXDQJWSo5sbRxdh_Shxe_LNYUlcI3j7K9uv5P5VVUkBlmaRqpPnZS_y2Gp0r2np2cSCh-WJ39UjOODZE9cWTOntQsNDVSeoSOe6pFyNOEt_kpQt_zwukq_ZdpY3Lxt4P8a8AxLEnfBagQW7344yDRP9Dd2qCWUJK5xndbxMeZVVd-4Icg3GaVRfg-nsi-9ucZhFc6QmyVklm
' URL: http://www.plantuml.com/plantuml/uml/jLTjJ-D64FwUNs4f7p0gHa1LwOIkw4BY0YfNK99Ue5M5DlQIRB5tezqDu7BmspkxQ--Byy9TfGefxCwCdtaVZpy9YRXSbaL7F12wG1oLKLOW8NfISZ9TIdoHCJeY_-3ee3CdEOuomhC2TpfQAZfT5WMMqKidYjwUZoD2fJfLzfGROlHpTAIlLNCzKDSNq2v9zXhDCPdDPSFxAU0zaLpE6zO7O2K9_FnWDCS6VoyomBkAirpaIE9OFO-FepDKuf4wxXv7ZupaIYBdw2cU7UN0vMWn9vau6dXiWUKNNB2Co2hE6mMrwPxO3CjJjgIvY84un9b4T5RWeq7djObEId5PZH5zC06oBc55Dmw8uwZ7EQekYP0V3Ua4_AJuQPKUxrhlBVB_4W1hg45AFNCtebgd5SVuEsM8WufiZZYuz09_EydEdls9NlU-YHIzAh1ioJccyhf05UOMTETvHpCP5Qm0iqOPeXJpEeBrBHvLGk9odr0Nm0NWn9xB2mxHErK6-zHiZhE72T4WG9uoK89eyppcdzaZZjT6e8_e8nAjlFU6QUzkSZ4OdzjIFpXObJXFByxEnosHTjmLRL47GnM2ki-0UJNz6qenAAipIpvH_YkfIyOMy1mfCLSaNP2Z1NgY6guXwqWvRtJzTHUOtpDUzbbH444O7M09o728mzwmbYgwRxRgBvF665hcmPZlfmA1utrMBXY5XCSpLwHUf444x40PZfnt9jhlLl_Rzkf_Ux-lBQZMc0pkheVfQ9GER8L0skvH8PItYLJHF8uAHcShSuyZchEIOW7v6kfpNRdcOXh-hFSvlRlwaWxNmlUsAfzivOwsSwzx_NH5mjO54TQmLcz0VXrhjcAzbseYREnMCHmhNx4YmEXjnd0ij1rZiXd3iPwsOmG1Q-40TxC6nnBRD2Z9GCLqhHqquxY4pj5jt6fAIrFb61Rq6CEGvBgYtGkWX5wC4Pz1VOvW8Q2pF_zQ6NUw4_gCIWuZeKPODwvCsRIaL_jK2JtWwff3L-0y1jwlk4eVSV3k1O4X1iStI5ZRxClNkGIbEBxezowR-NeOSC-lXXT_NFqsTdork7JjRjErkqrNthZZhJswZUTGNwlW6YmpFwfXq0rtdoDDanDVhgQT1uA7YfZaX9lXw-zL2UC4We5yklDBlvd_u-wHiOB1BEkhVo2f_--VNlwUslHksacWzcvLtPaegLA-ZTTjL3UXq4sD5GeDgb0AxclNiy5pI-wvsUTQSaqKFN4WNxamXZW-8yo0X_lkUwXh9DvRh43m7dJK-ovGpSckST-yrYMAtMZRADLLKZgBMnTadVeugskXDQJWSo5sbRxdh_Shxe_LNYUlcI3j7K9uv5P5VVUkBlmaRqpPnZS_y2Gp0r2np2cSCh-WJ39UjOODZE9cWTOntQsNDVSeoSOe6pFyNOEt_kpQt_zwukq_ZdpY3Lxt4P8a8AxLEnfBagQW7344yDRP9Dd2qCWUJK5xndbxMeZVVd-4Icg3GaVRfg-nsi-9ucZhFc6QmyVklm
' Generated on: 2026-04-02T21:41:49.512435400

@startuml
skinparam classAttributeIconSize 0
hide circle

class Bullet {
  ~x: int
  ~y: int
  ~dx: int = 2
  ~dy: int = 0
  ~{static} height: int = 5
  ~{static} width: int = 8
  --
  +Bullet(x: int, y: int)
  +update(state: GameState): void
  +draw(g2d: Graphics2D): void
  +setVelocity(dx: int, dy: int): void
  +getBounds(): Rectangle2D
}

class EnemyTank {
  ~{static} enemyBullets: ArrayList<Bullet> = new ArrayList<Bullet>()
  --
  +EnemyTank(x: int, y: int)
  +update(state: GameState): void
  +draw(g2d: Graphics2D): void
  +{static} updateEnemyBullets(state: GameState): void
}

class GameCanvas {
  ~{static} AREA_WIDTH: int = 500
  ~{static} AREA_HEIGHT: int = 500
  ~state: GameState
  ~player: Tank
  ~gameObjects: ArrayList<GameObject>
  -gameLoop: Timer
  -enemySpawner: Timer
  --
  +GameCanvas()
  #performCollisionDetection(): void
  +getGameState(): GameState
  +setPlayer(tank: Tank): void
  +paintComponent(g: Graphics): void
}

interface GameObject {
  ~update(state: GameState): void
  ~draw(g2d: Graphics2D): void
  ~getBounds(): Rectangle2D
}

class GameState {
  -D_PRESSED: boolean = false
  -timer: long = 0
  ~{static} randomness: Random = new Random()
  -GAME_OVER: boolean = false
  -A_PRESSED: boolean = false
  -W_PRESSED: boolean = false
  -S_PRESSED: boolean = false
  -SPACE_PRESSED: boolean
  --
  +isGAME_OVER(): boolean
  +setGAME_OVER(gAME_OVER: boolean): void
  +isD_PRESSED(): boolean
  +setD_PRESSED(d_PRESSED: boolean): void
  +isA_PRESSED(): boolean
  +setA_PRESSED(a_PRESSED: boolean): void
  +isW_PRESSED(): boolean
  +setW_PRESSED(w_PRESSED: boolean): void
  +isSPACE_PRESSED(): boolean
  +isS_PRESSED(): boolean
  +setS_PRESSED(s_PRESSED: boolean): void
  +setSPACE_PRESSED(b: boolean): void
  +incrementTimer(): void
  +getTimer(): long
}

class GameTester {
  +{static} main(args: String[]): void
}

class StateController {
  ~state: GameState
  --
  +StateController(state: GameState)
  +keyPressed(e: KeyEvent): void
  +keyReleased(e: KeyEvent): void
}

class Tank {
  +{static} VERTICAL: int = 1
  +{static} HORIZONTAL: int = 2
  #x: int
  #y: int
  #tX: int
  #tY: int
  #dx: int = 1
  #dy: int = 1
  #width: int = 30
  #height: int = 20
  #tWidth: int = 20
  #tHeight: int = 10
  -direction: int = 0
  -orientation: int = HORIZONTAL
  ~bullets: ArrayList<Bullet> = new ArrayList<Bullet>()
  -color: Color = Color.BLUE
  --
  +Tank(x: int, y: int)
  +getY(): int
  +setY(y: int): void
  +getX(): int
  +setX(x: int): void
  +getDy(): int
  +setDy(dy: int): void
  +getDx(): int
  +setDx(dx: int): void
  +getDirection(): int
  +getOrientation(): int
  +setOrientation(direction: int): void
  +update(state: GameState): void
  #updateBullets(state: GameState): void
  #fireBullet(): Bullet
  +draw(): void
  +draw(g2d: Graphics2D): void
  -drawBullets(g2d: Graphics2D): void
  #drawTank(g2d: Graphics2D): void
  +setColor(c: Color): void
  +setSize(width: int, height: int): void
  #updateTurretPosition(): void
  +setPosition(x: int, y: int): void
  +setVelocity(dx: int, dy: int): void
  +setDirection(direction: int): void
  +getBounds(): Rectangle2D
  +toString(): String
}

class TankFactory {
  +{static} createEnemyTank(): Tank
}

Bullet ..|> GameObject
Bullet ..> GameState
EnemyTank --|> Tank
EnemyTank o-- Bullet
EnemyTank ..> GameState
GameCanvas --> GameState
GameCanvas --> Tank
GameCanvas o-- GameObject
GameObject ..> GameState
StateController --> GameState
Tank ..|> GameObject
Tank o-- Bullet
Tank ..> GameState
TankFactory ..> Tank
@enduml